# Graphic-engine

./: CMakeLists.txt  D3.cpp  D3.h  L2.cpp  L2.h  L3.cpp  L3.h  Light.cpp  Light.h  README.md  ZBuffer.cpp  ZBuffer.h  aangepast.L2D  aangepast.ini  easy_image.cc  easy_image.h  engine.cc  l_parser.cc  l_parser.h  vector3d.h
